[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frame-transforms"
version = "0.1.0"
description = "Automatically compute and apply coordinate frame transformations"
readme = "README.md"

requires-python = ">=3.10, <=3.11"
dependencies = [
    "numpy >= 2.2",
    "scipy >= 1.15",
]
