[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frame-transforms"
version = "0.1.0"
readme = "README.md"

description = "Automatically compute and apply coordinate frame transformations"
keywords = ["coordinate", "frame", "transformation", "pose", "geometry", "robotics"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.10"
dependencies = [
    "numpy >= 2.2",
    "scipy >= 1.15",
]


[project.urls]
Homepage = "https://github.com/MinhxNguyen7/FrameTransforms/"